--- a/galeria.html
+++ b/galeria.html
@@ -29,13 +29,23 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse menu" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link" href="index.html">HOME</a>
-          <a class="nav-link" href="galeria.html">GALERIA</a>
-          <a class="nav-link" href="nosotros.html">NOSOTROS</a>
-          <a class="nav-link" href="contacto.html">CONTACTO</a>
-          <a class="nav-link" href="clientes.html">CLIENTES</a>
-        </div>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">HOME</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="galeria.html">GALERIA</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="nosotros.html">NOSOTROS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contacto.html">CONTACTO</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="clientes.html">CLIENTES</a>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
