--- a/index.html
+++ b/index.html
@@ -45,24 +45,24 @@
 
      <!-- PROMOCIONES // CAROUSEL -->
     <div class="promociones container">
-      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div id="carousel-1" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
               <div class="carousel-item active">
-                  <img src="img/img27.jpeg" class="d-block home_promos_contenedor_img polaroid" alt="...">
+                  <img src="img/img27.jpeg" class="d-block w-100 home_promos_contenedor_img polaroid" alt="...">
               </div>
               <div class="carousel-item">
-                  <img src="img/img16.jpeg" class="d-block home_promos_contenedor_img polaroid" alt="...">
+                  <img src="img/img16.jpeg" class="d-block w-100 home_promos_contenedor_img polaroid" alt="...">
               </div>
               <div class="carousel-item">
-                  <img src="img/img25.1.png" class="d-block home_promos_contenedor_img polaroid" alt="...">
+                  <img src="img/img25.1.png" class="d-block w-100 home_promos_contenedor_img polaroid" alt="...">
               </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+          <button class="carousel-control-prev" type="button" data-bs-target="#carousel-1"
               data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+          <button class="carousel-control-next" type="button" data-bs-target="#carousel-1"
               data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
@@ -70,6 +70,38 @@
       </div>
   </div>
 
+
+  <div class="promociones-mobile container">
+    <div class="row">
+        <div class="col">
+            <div>
+                <div id="carousel-2" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="img/img2.1.png" class="d-block w-100 home_promos_contenedor_img polaroid" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/img7.3.png" class="d-block w-100 home_promos_contenedor_img polaroid" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/img23.1.png" class="d-block w-100 home_promos_contenedor_img polaroid" alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel-2"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carousel-2"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
   <!-- INFO -->
@@ -91,53 +123,83 @@
           <div class="row">
               <div class="col-lg-4 col-md-12 col-sm-12" data-aos="flip-left" data-aos-duration="3000">
                   <div class="categorias__carousel">
-                      <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-                          <div class="carousel-inner">
-                              <div class="carousel-item active polaroid">
-                                  <img src="img/img2.1.png" class="d-block w-100" alt="...">
-                              </div>
-                              <div class="carousel-item polaroid">
-                                  <img src="img/img2.1.png" class="d-block w-100" alt="...">
-                              </div>
-                              <div class="carousel-item polaroid">
-                                  <img src="img/img2.1.png" class="d-block w-100" alt="...">
-                              </div>
-                          </div>
-                      </div>
+                    <div id="carousel-3" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="img/img2.1.png" class="d-block w-100 home_promos_contenedor_img polaroid" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/img7.3.png" class="d-block w-100 home_promos_contenedor_img polaroid" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/img23.1.png" class="d-block w-100 home_promos_contenedor_img polaroid" alt="...">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carousel-3"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carousel-3"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
                   </div>
               </div>
               <div class="col-lg-4 col-md-12 col-sm-12" data-aos="flip-up" data-aos-duration="3000">
                   <div class="categorias__carousel">
-                      <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-                          <div class="carousel-inner">
-                              <div class="carousel-item active polaroid">
-                                  <img src="img/img7.3.png" class="d-block w-100" alt="...">
-                              </div>
-                              <div class="carousel-item polaroid">
-                                  <img src="img/img7.3.png" class="d-block w-100" alt="...">
-                              </div>
-                              <div class="carousel-item polaroid">
-                                  <img src="img/img7.3.png" class="d-block w-100" alt="...">
-                              </div>
-                          </div>
-                      </div>
+                    <div id="carousel-4" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="img/img2.1.png" class="d-block w-100 home_promos_contenedor_img polaroid" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/img7.3.png" class="d-block w-100 home_promos_contenedor_img polaroid" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/img23.1.png" class="d-block w-100 home_promos_contenedor_img polaroid" alt="...">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carousel-4"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carousel-4"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
                   </div>
               </div>
               <div class="col-lg-4 col-md-12 col-sm-12" data-aos="flip-right" data-aos-duration="3000">
                   <div class="categorias__carousel">
-                      <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-                          <div class="carousel-inner">
-                              <div class="carousel-item active polaroid">
-                                  <img src="img/img23.1.png" class="d-block w-100" alt="...">
-                              </div>
-                              <div class="carousel-item polaroid">
-                                  <img src="img/img23.1.png" class="d-block w-100" alt="...">
-                              </div>
-                              <div class="carousel-item polaroid">
-                                  <img src="img/img23.1.png" class="d-block w-100" alt="...">
-                              </div>
-                          </div>
-                      </div>
+                    <div id="carousel-5" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="img/img2.1.png" class="d-block w-100 home_promos_contenedor_img polaroid" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/img7.3.png" class="d-block w-100 home_promos_contenedor_img polaroid" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/img23.1.png" class="d-block w-100 home_promos_contenedor_img polaroid" alt="...">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carousel-5"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carousel-5"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
                   </div>
               </div>
           </div>
@@ -184,7 +246,7 @@
           <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
               data-bs-parent="#accordionFlushExample">
               <div class="accordion-body">
-                Lamentablemente no contamos con local a la calle. Pero presenciamos distintas ferias de artesanos, si queres saber cuando y donde encontrarnos seguinos en <a href="https://www.instagram.com/hasta.la.madeja/" target="_blank">Instagram</a>.
+                Lamentablemente no contamos con local a la calle. Pero presenciamos distintas ferias de artesanos, si queres saber cuando y donde encontrarnos <a href="https://www.instagram.com/hasta.la.madeja/" target="_blank">seguinos en Instagram</a>.
               </div>
           </div>
       </div>
